Update Config.java